--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,12 @@
 
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
+    <!-- include the stylesheets -->
+    <link rel="stylesheet" href="packages/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="packages/bootstrap/css/bootstrap-theme.css">
+
+    <!-- include the javascript -->
+    <script src="packages/bootstrap/js/bootstrap.js"></script>
   </head>
   <body>
     <my-app>Loading...</my-app>
