Include main css file

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <!-- include the stylesheets -->
     <link rel="stylesheet" href="packages/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="packages/bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- include the javascript -->
     <script src="packages/bootstrap/js/bootstrap.js"></script>
