--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="main.css">
 
     <!-- include the javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
     <script src="packages/bootstrap/js/bootstrap.js"></script>
   </head>
   <body>
