Replace bootstrap3 with mdl

--- a/web/index.html
+++ b/web/index.html
@@ -5,14 +5,11 @@
 
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
-    <!-- include the stylesheets -->
-    <link rel="stylesheet" href="packages/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="packages/bootstrap/css/bootstrap-theme.css">
+    <head>
+      <link rel="import" href="packages/material_design_lite/material.html">
+    </head>
     <link rel="stylesheet" href="main.css">
 
-    <!-- include the javascript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
-    <script src="packages/bootstrap/js/bootstrap.js"></script>
   </head>
   <body>
     <my-app>Loading...</my-app>
